can just be run directly rather than using B<inndstart>.

=item *

INN now uses S<autoconf 2.59> or later for configuration.  As a result, some
C<configure> options have changed slightly and more of the standard B<--*dir>
options should be supported in lieu of the old INN-specific options.  See
C<configure --help> for the available options.

=item *

B<tinyleaf>, a miniature IHAVE-only leaf server, is now included.  See the
tinyleaf(8) man page for more information.

=item *

The Perl and Python filter_mode hooks are now called when B<innd> is shutting
down via either C<ctlinnd shutdown> or C<ctlinnd xexec> with a new mode
value of C<shutdown>.  This will allow the Perl hooks to save filter data
across B<innd> restarts without requiring that the news administrator
throttle the server first.  (Python already had a separate close hook that
is also called.)

=item *

The legacy F<innshellvars.pl> file has been replaced with a real INN Perl
module C<INN::Config> for Perl programs.  All Perl scripts shipped with INN
have been converted to use that module.

=item *

Support for embedded Tcl filters in B<innd> has been removed.  It hasn't
worked for some time and causes B<innd> crashes if compiled in (even if not
used).  If someone wants to step forward and maintain it, I recommend
starting from scratch and emulating the Perl and Python filters.

=item *

If I<strippath> is set in F<readers.conf>, the whole user-supplied Path: header
will now be stripped.  Previously, the final component of the
user-supplied Path: would still be retained.

=item *

The B<-g> option to B<nnrpd> is no longer supported.  If you are verifying
passwords against the system password database, see the ckpasswd(8) man
page, and in particular the B<-s> option.  (A much better idea would be to
just use PAM, which B<ckpasswd> supports.)

=item *

Support for I<runasuser> and I<runasgroup> parameters in F<inn.conf>
allows to set the news user and the news group under which the news server